Fixed CSS not being applied on Safari

--- a/nikola/data/themes/base/assets/css/theme.css
+++ b/nikola/data/themes/base/assets/css/theme.css
@@ -34,7 +34,9 @@ body {
 	padding: 1em;
 }
 @media print {
-	font-family: Garamond, serif;
+	body {
+		font-family: Garamond, serif;
+	}
 }
 
 #container {
